<resources>
    <string name="app_name">Habbits</string>
    <string name="button_add_habit">Добавить привычку</string>
    <string name="editor_habit_name">Название привычки</string>
    <string name="editor_habit_description">Описание</string>
    <string name="editor_habit_priority">Приоритет</string>
    <string name="editor_habit_type">Тип</string>
    <string name="editor_habit_done_count">Выполнено раз:</string>
    <string name="editor_habit_periodicity">Периодичность раз в час: </string>
    <string name="editor_good_habit_type">Хорошая</string>
    <string name="editor_bad_habit_type">Плохая</string>
    <string name="button_save_habit">Сохранить</string>
    <string name="editor_habit_color">Цвет</string>
    <string name="title_activity_example">example</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="menu_main_page">Главная</string>
    <string name="menu_info_page">Информация</string>
    <string name="app_info">Информация о приложении</string>
    <string name="developer">Разработчик: ZeroNetto</string>
    <string name="version">Версия приложения: 4.0</string>
</resources>
